modified - gallery overflow-x fix, info-box height vs scale, scrollY fix.

--- a/css/style.css
+++ b/css/style.css
@@ -672,6 +672,14 @@ button{
 
 
 /* --------Carousel Base-------- */
+.carousels-wrapper{
+    min-width: 100vw;
+    max-width: 100vw; 
+    overflow-x:hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 .carousel-container {
     backdrop-filter: blur(1px);
 
@@ -1257,11 +1265,12 @@ h4{
     grid-template-columns: repeat(2, 1fr);
     background: goldenrod;
     gap: 7px;
-    box-shadow: 0px 0px 20px 1px rgba(255, 255, 255, 0.274);
+    box-shadow: 0px 0px 20px 1px rgba(255, 255, 255, 0);
     transition: 1s linear;
 }
 
 .info-box-pair{
+    position: relative;
     display: flex;
     grid-column: 1 / -1;
     gap:8px;
@@ -1270,6 +1279,7 @@ h4{
     transition: 1s ease;
     flex-wrap: nowrap;
     cursor:pointer;
+    overflow: hidden;
 }
 
 .info-box-pair:nth-child(even) {
